# mod

./: .env.local  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.dev.yml  Taskfile.yml  pyproject.toml  ruff.toml
docs/cn/: design.md  readme.md
